DFPL-1602: Fix unit test